[gd_scene load_steps=12 format=3 uid="uid://uumc3qf5afys"]

[ext_resource type="Script" path="res://Scripts/Scenes/ModProjectEditorScreen.gd" id="1_c8hsy"]
[ext_resource type="Texture2D" uid="uid://bg3eaxtoxarv0" path="res://Assets/SquarePlus.svg" id="2_t2mp6"]
[ext_resource type="Texture2D" uid="uid://cnu8kcmm14xqn" path="res://Assets/FolderPlus.svg" id="3_noa5g"]
[ext_resource type="FontFile" uid="uid://bcuw0llhyf36m" path="res://Assets/Ubuntu.ttf" id="4_ama3k"]
[ext_resource type="Texture2D" uid="uid://dagt601463kxm" path="res://Assets/EyeSlash.svg" id="5_yt8bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xir6k"]
bg_color = Color(0.117647, 0.160784, 0.231373, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5xuxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlide"]
bg_color = Color(0.2, 0.254902, 0.333333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p004c"]
bg_color = Color(0.117647, 0.160784, 0.231373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fug66"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igcwl"]

[node name="ModProjectEditorScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8hsy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xir6k")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5xuxy")

[node name="Editor" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DirectoryExplorer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jlide")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NewFileButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Create New FIle"
focus_mode = 0
theme_override_constants/icon_max_width = 20
action_mode = 0
icon = ExtResource("2_t2mp6")
flat = true
icon_alignment = 1

[node name="NewFolderButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Create New Folder"
focus_mode = 0
theme_override_constants/icon_max_width = 25
action_mode = 0
icon = ExtResource("3_noa5g")
flat = true
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SearchFilesLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_fonts/font = ExtResource("4_ama3k")
theme_override_font_sizes/font_size = 16
placeholder_text = "Search files"
context_menu_enabled = false

[node name="ToggleHiddenFilesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Show Hidden Files"
focus_mode = 0
theme_override_constants/icon_max_width = 24
toggle_mode = true
action_mode = 0
icon = ExtResource("5_yt8bh")
flat = true
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p004c")

[node name="Tree" type="Tree" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_constants/v_separation = 4
theme_override_constants/draw_relationship_lines = 1
theme_override_constants/draw_guides = 0
allow_search = false

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor"]
layout_mode = 2

[node name="MainWindow" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/HSplitContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_fug66")

[node name="PropertiesPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Editor/HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_igcwl")

[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/SearchFilesLineEdit" to="." method="onSearchFilesLineEditTextChanged"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Editor/DirectoryExplorer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/ToggleHiddenFilesButton" to="." method="onToggleHiddenFilesButtonToggled"]
